毕业项目和毕业总结

--- a/Final/毕业总结/毕业总结.md
+++ b/Final/毕业总结/毕业总结.md
@@ -1,4 +1,4 @@
-# 个人总结
+# 毕业总结
 
 ​		时光飞逝，一转眼 15 周的学习已经结束，通过这 15 周的学习，感觉自己成长了不少。俗话说的好，师傅领进门，修行在个人，老师明确了作为一个技术人需要掌握的技术的方向，那么接下来就需要靠自己去不断的深入学习，来获得技术上的突破，同时通过老师的加课，也学习了不少技术以外的知识。在与同学之间的交流学习中，也认识了不少同学。
 
